--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME='goodweeds_db'
-DB_USER='root'
+DB_NAME=goodweeds_db
+DB_USER=root
 
 # ! Grayson does not have a password -- DOUBLE-CHECK THAT YOURS IS SET IF NEEDED!
-DB_PASSWORD=''
+DB_PASSWORD=password
