--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "yarn": "^1.22.19"
   }
 }
