--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_NAME=goodweeds_db
 DB_USER=root
 
 # ! Grayson does not have a password -- DOUBLE-CHECK THAT YOURS IS SET IF NEEDED!
-DB_PASSWORD=
+DB_PASSWORD=Password1
