--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_USER=root
 
 # ! Grayson does not have a password -- DOUBLE-CHECK THAT YOURS IS SET IF NEEDED!
 
-DB_PASSWORD=password
+DB_PASSWORD=
 
