.env file update. also connected to jaws_db and config to jaws_db per heroku add-on docs

--- a/.env
+++ b/.env
@@ -3,7 +3,6 @@ DB_USER=root
 
 # ! Grayson does not have a password -- DOUBLE-CHECK THAT YOURS IS SET IF NEEDED!
 
-DB_PASSWORD=password
+DB_PASSWORD=
 
-testing heroku app 
-testing heroku app 2
+# changed password for graysons heroku deploy (1/14/23)
